# arx

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.codex/environments/: environment.toml
.github/workflows/: release.yml
.turbo/cache/: 1052b19c11d1cf52-manifest.json  1052b19c11d1cf52-meta.json  1052b19c11d1cf52.tar.zst  b108cd42f42af89c-manifest.json  b108cd42f42af89c-meta.json  b108cd42f42af89c.tar.zst  d5719974cf1fdc73-manifest.json  d5719974cf1fdc73-meta.json  d5719974cf1fdc73.tar.zst  dd208c103bebee78-manifest.json  dd208c103bebee78-meta.json  dd208c103bebee78.tar.zst
apps/: README.md
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/scripts/: dev-server.mjs  tauri.mjs
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai.rs  lib.rs  main.rs  models.rs  provider.rs  security.rs  store.rs
apps/desktop/src/components/: UpdateBanner.tsx
apps/desktop/src/lib/: api.ts  emailEditor.test.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  target  tauri.conf.json
src-tauri/src/: ai.rs  lib.rs  main.rs  models.rs  provider.rs  security.rs  store.rs
src/components/editor/: ComposerBubbleMenu.tsx
src/components/mail/: ConnectAccountForm.tsx  ThreadList.tsx
src/hooks/: useMountEffect.ts
src/lib/: api.ts  emailEditor.ts
src/types/: mail.ts
(+12 files in other folders)
