[package]
name = "arx"
version = "0.1.1"
description = "Arx AI inbox client"
authors = ["John Jeong"]
license = "UNLICENSED"
edition = "2021"
default-run = "arx"

[lib]
name = "arx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
imap = "2.4.1"
keyring = "3"
mailparse = "0.16.1"
native-tls = "0.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[dev-dependencies]
tempfile = "3"
